--- a/Source/Core/DolphinLib.vcxproj
+++ b/Source/Core/DolphinLib.vcxproj
@@ -27,6 +27,14 @@
       <Project>{41279555-f94f-4ebc-99de-af863c10c5c4}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Core\Brawlback\Savestate.cpp" />
+    <ClCompile Include="Core\HW\EXI\EXIBrawlback.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Core\Brawlback\Savestate.h" />
+    <ClInclude Include="Core\HW\EXI\EXIBrawlback.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
