--- a/Source/Core/DolphinLib.vcxproj
+++ b/Source/Core/DolphinLib.vcxproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ClCompile Include="Core\Brawlback\BrawlbackUtility.cpp" />
     <ClCompile Include="Core\Brawlback\Savestate.cpp" />
+    <ClCompile Include="Core\Brawlback\TimeSync.cpp" />
     <ClCompile Include="Core\Brawlback\SlippiUtility.cpp" />
     <ClCompile Include="Core\Brawlback\Netplay\Netplay.cpp" />
     <ClCompile Include="Core\HW\EXI\EXIBrawlback.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="Core\Brawlback\BrawlbackUtility.h" />
     <ClInclude Include="Core\Brawlback\Brawltypes.h" />
     <ClInclude Include="Core\Brawlback\Savestate.h" />
+    <ClInclude Include="Core\Brawlback\TimeSync.h" />
     <ClInclude Include="Core\Brawlback\SlippiUtility.h" />
     <ClInclude Include="Core\Brawlback\Netplay\Netplay.h" />
     <ClInclude Include="Core\HW\EXI\EXIBrawlback.h" />
