Refactor SlippiMatchmaking to handle connecting to players on EXI with current NetplayThread + Setup mock data for server matchmaking

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -12,6 +12,20 @@ add_library(core
   Boot/ElfReader.cpp
   Boot/ElfReader.h
   Boot/ElfTypes.h
+  Brawlback/include/json.hpp
+  Brawlback/Netplay/Matchmaking.cpp
+  Brawlback/Netplay/Matchmaking.h
+  Brawlback/Netplay/Netplay.cpp
+  Brawlback/Netplay/Netplay.h
+  Brawlback/BrawlbackUtility.cpp
+  Brawlback/BrawlbackUtility.h
+  Brawlback/Brawltypes.h
+  Brawlback/Savestate.cpp
+  Brawlback/Savestate.h
+  Brawlback/SlippiUtility.cpp
+  Brawlback/SlippiUtility.h
+  Brawlback/TimeSync.cpp
+  Brawlback/TimeSync.h
   BootManager.cpp
   BootManager.h
   CheatCodes.h
@@ -197,6 +211,8 @@ add_library(core
   HW/EXI/EXI_DeviceMemoryCard.h
   HW/EXI/EXI_DeviceMic.cpp
   HW/EXI/EXI_DeviceMic.h
+  HW/EXI/EXIBrawlback.cpp
+  HW/EXI/EXIBrawlback.h
   HW/EXI/EXI.cpp
   HW/EXI/EXI.h
   HW/GBAPad.cpp
@@ -583,7 +599,6 @@ PUBLIC
   videonull
   videoogl
   videosoftware
-  GGPO
 
 PRIVATE
   fmt::fmt
