--- a/Source/Core/DolphinQt/CMakeLists.txt
+++ b/Source/Core/DolphinQt/CMakeLists.txt
@@ -307,6 +307,8 @@ add_executable(dolphin-emu
   Settings/InterfacePane.h
   Settings/PathPane.cpp
   Settings/PathPane.h
+  Settings/BrawlbackPane.cpp
+  Settings/BrawlbackPane.h
   Settings/WiiPane.cpp
   Settings/WiiPane.h
   Settings/USBDeviceAddToWhitelistDialog.cpp
